# Distributed-Scientific-Visualization

./: Cargo.toml  README.md  lib.rs  main.rs
compute/: executor.rs  mod.rs  module.rs  task.rs
core/: message.rs  meta.rs  mod.rs  object.rs  parameter.rs  shm.rs
mpi/: mod.rs
render/: mod.rs
ui/: mod.rs
util/: mod.rs
