[package]
name = "vistle"
version = "2.0.0"
edition = "2021"
description = "Modern distributed scientific visualization system"
authors = ["Vistle Team"]
license = "LGPL-2.1"
repository = "https://github.com/vistle/vistle"
homepage = "https://vistle.io"

[dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }
tokio-util = "0.7"

# MPI support
mpi = "0.7"

# Scientific computing
ndarray = { version = "0.15", features = ["serde"] }
nalgebra = "0.32"

# Serialization
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
rkyv = { version = "0.7", features = ["validation"] }

# Shared memory
shared_memory = "0.12"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Configuration
toml = "0.8"
config = "0.14"

# GUI (modern replacement for Qt)
eframe = "0.24"
egui = "0.24"

# Rendering (modern replacement for OpenGL)
wgpu = "0.18"

# Utilities
uuid = { version = "1.0", features = ["v4"] }
dashmap = "5.5"
parking_lot = "0.12"

[dependencies.async-trait]
version = "0.1"

[build-dependencies]
bindgen = "0.69"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true

[workspace]
members = [
    "core",
    "modules/*",
]
